without-tls/prisma/primary.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: primary-deployment
  namespace: prisma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prisma-primary
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: prisma-primary
    spec:
      containers:
        - name: prisma-primary
          image: prismagraphql/prisma-prod:1.17.2
          imagePullPolicy: Always
          resources: # CHANGE THIS AS NEEDED
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          ports:
            - containerPort: 4466
---
apiVersion: v1
kind: Service
metadata:
  name: prisma-primary-service
  namespace: prisma
spec:
  selector: 
    app: prisma-primary
  type: ClusterIP
  ports:
    - name: http
      port: 4466
      targetPort: 4466
      protocol: TCP
