without-tls/prisma/secondary.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secondary-deployment
  namespace: prisma
spec:
  replicas: 2
  selector:
    matchLabels:
      app: prisma-secondary
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: prisma-secondary
    spec:
      containers:
        - name: prisma-secondary
          image: prismagraphql/prisma-prod:1.18-beta
          imagePullPolicy: Always
          resources: # CHANGE THIS AS NEEDED
            requests:
              memory: "2Gi"
              cpu: "1000m"
            limits:
              memory: "2Gi"
              cpu: "1500m"
          ports:
            - containerPort: 4466
---
apiVersion: v1
kind: Service
metadata:
  name: prisma-secondary-service
  namespace: prisma
spec:
  selector: 
    app: prisma-secondary
  type: ClusterIP
  ports:
    - name: http
      port: 4466
      targetPort: 4466
      protocol: TCP
