without-tls/prisma/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "prisma-primary"
  namespace: prisma
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: <YOUR_DOMAIN>
    http:
      paths:
        - path: /management
          backend:
            serviceName: prisma-primary-service
            servicePort: 4466

        - path: /
          backend:
            serviceName: prisma-secondary-service
            servicePort: 4466
